Responsive css update - Fix Background - Added semi transparent background to the welcome text - Fix bottom containers on views covered by footer

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -29,7 +29,7 @@ textarea {
     margin-bottom: 10px;
   }
 }
-.new-message{
+.bottom-page{
   padding-bottom: 50px;
 }
 
@@ -84,7 +84,6 @@ header {
   }
 }
 
-
 /* footer */
 footer {
   margin-top: 45px;
@@ -130,18 +129,32 @@ footer {
 
 /* Home */
 #home{
-  // background-image: url(background.jpg);
-  // background-image: url(fushimi-inari.jpg);
-  background-image: url(https://github.com/dsanta87/dsanta87.github.io/blob/master/app/assets/stylesheets/fushimi-inari.jpg?raw=true);
-  background-repeat: no-repeat;
-  background-size: 100% auto;
-  height: 1024px;
-  .home-container{
-    top: 33%;
-    color: white;
-    position: relative;
-    vertical-align: middle;
+  .flex-container{
+    // background-image: url(background.jpg);
+    // background-image: url(fushimi-inari.jpg);
+    background-image: url(https://github.com/dsanta87/dsanta87.github.io/blob/master/app/assets/stylesheets/fushimi-inari.jpg?raw=true);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    position: absolute;
+    display: flex;
+    flex-wrap: nowrap;
+    -webkit-flex-wrap: nowrap;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
   }
+}
+
+/* Wrapper*/
+#wrapper{
+  border-radius: 15px;
+  background-color: #000000AA;
+  width: 300px;
+  height: 160px;
+  position: absolute;
+  margin-top: 20%;
+  color: $gray-medium-light;
 }
 
 /* Sidebar */
